--- a/SnapYourColor/style.css
+++ b/SnapYourColor/style.css
@@ -1,12 +1,13 @@
 
 :root {
-	--banner: #071930;
+	--banner: #181818;
 	--headline: #F24738;
-  	--background: #023852;
+  	--background: #181818;
   	--infoBox: #851934;
   	--detail1: #03A694;
   	--detail2: #F24738;
-  	--text: white;
+  	--text: black;
+  	--button: #ADFF2F;
 }
 
 * {
@@ -29,25 +30,191 @@ body {
 
 #banner {
 	width: 100%;
-	height: 100px;
+	height: 10%;
 	background: var(--banner);
 }
 
-#banner h1 {
+#logo {
 	display: block;
 	position: relative;
 
-	width: 500px;
-	height: 50px;
+	height: 100%;
 	margin: auto;
 	padding-top: 20px;
+}
 
-	color: var(--headline);
+/* --------------- START VIEW ----------------------*/
+#startView {
+	display: block;
+	position: relative;
+
+	width: 100%;
+	height: 90%;
+}
+
+#startButton {
+	display: block;
+	position: absolute;
+
+	width: 250px;
+	height: 250px;
+
+	top: 50%;
+	left: 50%;
+	margin-top: -125px;
+	margin-left: -125px;
+	background: var(--button);
+
+	border-radius: 125px;
+	cursor: pointer;
+}
+
+#startButtonText {
+	position: relative;
+	display: block;
+
+	width: 50px;
+	height: 20px;
+
+	top: 50%;
+	left: 50%;
+	margin-top: -10px;
+	margin-left: -25px;
+
+	color: var(--text);
+	font-family: Arial, sens-serif;
+	font-size: 1.5em;
+}
+
+/* --------------- RESULT VIEW ----------------------*/
+
+#resultView {
+	display: none;
+	position: relative;
+
+	width: 100%;
+	height: 90%;
+}
+
+#resultColor {
+	display: block;
+	position: relative;
+
+	width: 250px;
+	height: 250px;
+
+	top: 20%;
+	left: 50%;
+	margin-top: -125px;
+	margin-left: -125px;
+	background: var(--detail1);
+
+	border-radius: 125px;
+}
+
+#resultColorValues {
+	display: block;
+	position: absolute;
+
+	width: 250px;
+	height: 100px;
+
+	top: 55%;
+	left: 50%;
+	margin-left: -125px;
+
+}
+	
+input[type="text"] {
+	position: relative;
+	width: 150px;
+	height: 40px;
+
+	margin-top: 10px;
+	margin-left: 1px;
+
+	border: 1px solid lightgray;
+	border-radius: 3px;
+	padding: 0px 0px 0px 100px;
+}
+
+label {
+	display: inline-block;
+	left: 0;
+	width: 40px;
+	height: 42px;
+	line-height: 40px;
+	color: white;
+	border-radius: 3px 0 0 3px;
+	padding: 0 20px;
+	background: var(--detail1);
+}
+
+#rgbLabel {
+	position: absolute;
+	z-index: 999;
+	
+	left: 0;
+	top: 10px;
+}
+
+#hexLabel {
+	position: absolute;
+	z-index: 999;
+	
+	left: 0;
+	margin-top: 10px;
+}
+
+
+/* --------------- CAMERA VIEW ----------------------*/
+#cameraView {
+	display: none;
+	position: absolute;
+	z-index: 998;
+
+	width: 100%;
+	height: 100%;
+	background: var(--background)
+}
+
+#captureImageButton {
+	display: block;
+	position: relative;
+	z-index: 999;
+
+	width: 250px;
+	height: 250px;
+
+	left: 50%;
+	margin-top: -350px;
+	margin-left: -125px;
+	background: var(--button);
+
+	border-radius: 125px;
+	background: var(--button);
+	cursor: pointer;
+}
+
+#captureImageButtonText {
+	position: relative;
+	display: block;
+
+	width: 200px;
+	height: 20px;
+
+	top: 50%;
+	left: 50%;
+	margin-top: -30px;
+	margin-left: -90px;
+
+	color: var(--text);
 	font-family: Helvetica, sens-serif;
-	font-size: 3em;
+	font-size: 1.5em;
 }
 
 #infoBox {
+	display: none;
 	width: 700px;
 	height: auto;
 
@@ -55,9 +222,6 @@ body {
 	margin-top: 10px;
 }
 
-#messageBox {
-
-}
 
 #ambient_light {
 
@@ -80,11 +244,13 @@ body {
 
 #video {
 	display: block;
-	width: 700px;
-	min-height: 500px;
-
 	margin: auto;
-	margin-top: 20px;
+	height: 100%;
+}
 
-	background: var(--detail1);
+#canvas {
+	display: none;
+	z-index: 1000;
+	position: absolute;
+	margin: auto;
 }
