--- a/SnapYourColor/style.css
+++ b/SnapYourColor/style.css
@@ -45,7 +45,7 @@ body {
 
 /* --------------- START VIEW ----------------------*/
 #startView {
-	display: block;
+	display: none;
 	position: relative;
 
 	width: 100%;
@@ -166,6 +166,27 @@ label {
 	margin-top: 10px;
 }
 
+#brightnessSlider {
+	display: block;
+	position: absolute;
+
+	width: 250px;
+	height: 30px;
+
+	top: 70%;
+	left: 50%;
+	margin-left: -125px;
+}
+
+#slider {
+	-webkit-appearance: none;
+    appearance: none;
+    width: 100%; 
+    height: 25px;
+    background: var(--background);
+    outline: none; 
+}
+
 
 /* --------------- CAMERA VIEW ----------------------*/
 #cameraView {
@@ -214,7 +235,7 @@ label {
 }
 
 #infoBox {
-	display: none;
+	display: block;
 	width: 700px;
 	height: auto;
 
@@ -253,4 +274,13 @@ label {
 	z-index: 1000;
 	position: absolute;
 	margin: auto;
+}
+
+/* --------------- LOADING VIEW ----------------------*/
+#loadingView {
+	display: none;
+	position: absolute;
+
+	width: 100%;
+	height: 100%;
 }
