implemented color update

--- a/SnapYourColor/style.css
+++ b/SnapYourColor/style.css
@@ -117,6 +117,10 @@ body {
 	border-radius: 125px;
 }
 
+#resultColorStore {
+	display: none;
+}
+
 #resultColorValues {
 	display: block;
 	position: absolute;
