--- a/SnapYourColor/style.css
+++ b/SnapYourColor/style.css
@@ -9,8 +9,8 @@
   	--text: black;
   	--button: #ADFF2F;
 
-  	--startViewDisplay: none;
-  	--resultViewDisplay: block;
+  	--startViewDisplay: block;
+  	--resultViewDisplay: none;
   	--cameraViewDisplay: none;
   	--infoBoxDisplay: none;
 }
@@ -36,6 +36,10 @@ body {
 #banner {
 	width: 100%;
 	height: 10%;
+
+	min-height: 50px;
+
+	margin-top: 20px;
 	background: var(--banner);
 }
 
@@ -45,7 +49,7 @@ body {
 
 	height: 100%;
 	margin: auto;
-	padding-top: 20px;
+	padding-top: 0px;
 }
 
 /* --------------- START VIEW ----------------------*/
@@ -54,7 +58,7 @@ body {
 	position: relative;
 
 	width: 100%;
-	height: 90%;
+	height: 85%;
 }
 
 #startButton {
@@ -98,23 +102,35 @@ body {
 	position: relative;
 
 	width: 100%;
-	height: 90%;
+	height: 80%;
+}
+
+#resultViewContent {
+	display: block;
+	position: relative;
+
+	width: 40%;
+	height: 70%;
+
+	min-height: 400px;
+	min-width: 400px;
+
+	margin: auto;
+
+	margin-top: 50px;
 }
 
 #resultColor {
 	display: block;
 	position: relative;
 
-	width: 250px;
-	height: 250px;
+	width: 50%;
+	height: 50%;
 
-	top: 20%;
-	left: 50%;
-	margin-top: -125px;
-	margin-left: -125px;
+	margin: auto;
 	background: var(--detail1);
 
-	border-radius: 125px;
+	border-radius: 20%;
 }
 
 #resultColorStore {
@@ -123,75 +139,80 @@ body {
 
 #resultColorValues {
 	display: block;
-	position: absolute;
+	position: relative;
 
-	width: 250px;
-	height: 100px;
+	width: 50%;
+	height: 35%;
 
-	top: 55%;
-	left: 50%;
-	margin-left: -125px;
+	margin: auto;
+	top: 20px;
 
+	border: 1px solid var(--background);
 }
 	
 input[type="text"] {
+	display: block;
 	position: relative;
-	width: 150px;
-	height: 40px;
+	
+	width: 50%;
+	height: 30%;
 
 	margin-top: 10px;
-	margin-left: 1px;
 
-	border: 1px solid lightgray;
-	border-radius: 3px;
-	padding: 0px 0px 0px 100px;
+	border: 0px solid lightgray;
+	border-radius: 0px 3px 3px 0px;
+	padding-left: 24%;
 }
 
 label {
-	display: inline-block;
-	left: 0;
-	width: 40px;
-	height: 42px;
-	line-height: 40px;
-	color: white;
+	position: relative;
+	display: table;
+	float: left;
+
+	width: 25%;
+	height: 30%;
+
+	margin-top: 10px;
+
 	border-radius: 3px 0 0 3px;
-	padding: 0 20px;
+	/*padding-left: 5%;*/
+
+	line-height: 100%;
+	color: white;
+	font-size: 1.3em;
+	text-align: center;
+
 	background: var(--detail1);
 }
 
-#rgbLabel {
-	position: absolute;
-	z-index: 999;
+.label {
+	display: table-cell;
+	vertical-align: middle;
+}
+
+#rgbLabel {	
 	
-	left: 0;
-	top: 10px;
 }
 
 #hexLabel {
-	position: absolute;
-	z-index: 999;
-	
-	left: 0;
-	margin-top: 10px;
+
 }
 
 #brightnessSlider {
 	display: block;
-	position: absolute;
+	position: relative;
 
-	width: 250px;
-	height: 30px;
-
-	top: 70%;
-	left: 50%;
-	margin-left: -125px;
+	width: 50%;
+	height: 20%;
+	margin: auto;
 }
 
 #slider {
-	-webkit-appearance: none;
-    appearance: none;
-    width: 100%; 
-    height: 25px;
+	/*-webkit-appearance: none;
+    appearance: none;*/
+
+    width: 100%;
+
     background: var(--background);
     outline: none; 
 }
@@ -291,5 +312,5 @@ label {
 	position: absolute;
 
 	width: 100%;
-	height: 100%;
+	height: 85%;
 }
