--- a/SnapYourColor/style.css
+++ b/SnapYourColor/style.css
@@ -58,41 +58,68 @@ body {
 	position: relative;
 
 	width: 100%;
-	height: 85%;
+	height: 80%;
+}
+
+#startViewContent {
+	display: block;
+	position: relative;
+
+	width: 50%;
+	height: 70%;
+
+	min-height: 400px;
+	min-width: 400px;
+
+	margin: auto;
+
+	margin-top: 50px;
+
+}
+
+#introduction {
+	display: block;
+	position: relative;
+
+	width: 50%;
+	height: 50%;
+
+	margin: auto;
+
+	color: lightgrey;
+	font-family: Arial, sens-serif;
+	font-size: 1.3vw;
+	text-align: center;
 }
 
 #startButton {
-	display: block;
-	position: absolute;
+	display: table;
+	position: relative;
 
-	width: 250px;
-	height: 250px;
+	width: 30%;
+	height: 30%;
 
-	top: 50%;
-	left: 50%;
-	margin-top: -125px;
-	margin-left: -125px;
+	margin: auto;
+	top: 10px;
 	background: var(--button);
 
-	border-radius: 125px;
+	border-radius: 50%;
 	cursor: pointer;
 }
 
 #startButtonText {
 	position: relative;
-	display: block;
+	display: table-cell;
+
+	vertical-align: middle;
 
 	width: 50px;
 	height: 20px;
 
-	top: 50%;
-	left: 50%;
-	margin-top: -10px;
-	margin-left: -25px;
-
 	color: var(--text);
 	font-family: Arial, sens-serif;
 	font-size: 1.5em;
+	text-align: center;
 }
 
 /* --------------- RESULT VIEW ----------------------*/
