fixed camera view and color update

--- a/SnapYourColor/style.css
+++ b/SnapYourColor/style.css
@@ -202,7 +202,6 @@ label {
 	margin-top: 10px;
 
 	border-radius: 3px 0 0 3px;
-	/*padding-left: 5%;*/
 
 	line-height: 100%;
 	color: white;
@@ -248,47 +247,47 @@ label {
 /* --------------- CAMERA VIEW ----------------------*/
 #cameraView {
 	display: var(--cameraViewDisplay);
-	position: absolute;
+	position: relative;
 	z-index: 998;
 
 	width: 100%;
-	height: 100%;
+	height: 70%;
+
+	top: 20px;
+
 	background: var(--background)
 }
 
 #captureImageButton {
-	display: block;
-	position: relative;
 	z-index: 999;
+	display: table;
+	position: relative;
 
-	width: 250px;
-	height: 250px;
+	width: 10%;
+	height: 10%;
+	min-width: 100px;
 
-	left: 50%;
-	margin-top: -350px;
-	margin-left: -125px;
-	background: var(--button);
+	margin: auto;
+	top: -15%;
 
-	border-radius: 125px;
+	border-radius: 5%;
 	background: var(--button);
 	cursor: pointer;
 }
 
 #captureImageButtonText {
 	position: relative;
-	display: block;
+	display: table-cell;
 
 	width: 200px;
 	height: 20px;
 
-	top: 50%;
-	left: 50%;
-	margin-top: -30px;
-	margin-left: -90px;
+	vertical-align: middle;
 
 	color: var(--text);
 	font-family: Helvetica, sens-serif;
 	font-size: 1.5em;
+	text-align: center;
 }
 
 #infoBox {
@@ -336,8 +335,8 @@ label {
 /* --------------- LOADING VIEW ----------------------*/
 #loadingView {
 	display: none;
-	position: absolute;
+	position: relative;
 
 	width: 100%;
-	height: 85%;
+	height: 80%;
 }
