--- a/SnapYourColor/style_mobile.css
+++ b/SnapYourColor/style_mobile.css
@@ -65,8 +65,8 @@ body {
 	display: block;
 	position: relative;
 
-	width: 50%;
-	height: 70%;
+	width: 90%;
+	height: 80%;
 
 	min-height: 400px;
 	min-width: 400px;
@@ -81,14 +81,14 @@ body {
 	display: block;
 	position: relative;
 
-	width: 50%;
+	width: 90%;
 	height: 50%;
 
 	margin: auto;
 
 	color: lightgrey;
 	font-family: Arial, sens-serif;
-	font-size: 1.3vw;
+	font-size: 1.3em;
 	text-align: center;
 }
 
@@ -96,8 +96,8 @@ body {
 	display: table;
 	position: relative;
 
-	width: 30%;
-	height: 30%;
+	width: 50%;
+	height: 40%;
 
 	margin: auto;
 	top: 10px;
@@ -136,8 +136,8 @@ body {
 	display: block;
 	position: relative;
 
-	width: 40%;
-	height: 70%;
+	width: 90%;
+	height: 100%;
 
 	min-height: 400px;
 	min-width: 400px;
@@ -151,7 +151,7 @@ body {
 	display: block;
 	position: relative;
 
-	width: 50%;
+	width: 75%;
 	height: 50%;
 
 	margin: auto;
@@ -168,7 +168,7 @@ body {
 	display: block;
 	position: relative;
 
-	width: 50%;
+	width: 75%;
 	height: 35%;
 
 	margin: auto;
@@ -216,19 +216,11 @@ label {
 	vertical-align: middle;
 }
 
-#rgbLabel {	
-	
-}
-
-#hexLabel {
-
-}
-
 #brightnessSlider {
 	display: block;
 	position: relative;
 
-	width: 50%;
+	width: 75%;
 	height: 20%;
 	margin: auto;
 }
@@ -263,7 +255,7 @@ label {
 	display: table;
 	position: relative;
 
-	width: 10%;
+	width: 80%;
 	height: 10%;
 	min-width: 100px;
 
