--- a/SnapYourColor/style.css
+++ b/SnapYourColor/style.css
@@ -6,7 +6,7 @@
   	--infoBox: #851934;
   	--detail1: #03A694;
   	--detail2: #F24738;
-  	--text: black;
+  	--text: #ADFF2F;
   	--button: #ADFF2F;
 
   	--startViewDisplay: block;
@@ -72,9 +72,7 @@ body {
 	min-width: 400px;
 
 	margin: auto;
-
 	margin-top: 50px;
-
 }
 
 #introduction {
@@ -88,7 +86,7 @@ body {
 
 	color: lightgrey;
 	font-family: Arial, sens-serif;
-	font-size: 1.3vw;
+	font-size: 1.3em;
 	text-align: center;
 }
 
@@ -101,9 +99,9 @@ body {
 
 	margin: auto;
 	top: 10px;
-	background: var(--button);
+	border: 2px solid var(--button);
 
-	border-radius: 50%;
+	border-radius: 3%;
 	cursor: pointer;
 }
 
