--- a/SnapYourColor/style.css
+++ b/SnapYourColor/style.css
@@ -79,7 +79,7 @@ body {
 	display: block;
 	position: relative;
 
-	width: 50%;
+	width: 80%;
 	height: 50%;
 
 	margin: auto;
@@ -94,11 +94,11 @@ body {
 	display: table;
 	position: relative;
 
-	width: 30%;
-	height: 30%;
+	width: 40%;
+	height: 20%;
 
 	margin: auto;
-	top: 10px;
+	top: 50px;
 	border: 2px solid var(--button);
 
 	border-radius: 3%;
@@ -214,14 +214,6 @@ label {
 	vertical-align: middle;
 }
 
-#rgbLabel {	
-	
-}
-
-#hexLabel {
-
-}
-
 #brightnessSlider {
 	display: block;
 	position: relative;
@@ -243,6 +235,7 @@ label {
 
 
 /* --------------- CAMERA VIEW ----------------------*/
+
 #cameraView {
 	display: var(--cameraViewDisplay);
 	position: relative;
@@ -261,7 +254,7 @@ label {
 	display: table;
 	position: relative;
 
-	width: 10%;
+	width: 20%;
 	height: 10%;
 	min-width: 100px;
 
@@ -282,39 +275,10 @@ label {
 
 	vertical-align: middle;
 
-	color: var(--text);
+	color: black;
 	font-family: Helvetica, sens-serif;
 	font-size: 1.5em;
 	text-align: center;
-}
-
-#infoBox {
-	display: var(--infoBoxDisplay);
-	width: 700px;
-	height: auto;
-
-	margin: auto;
-	margin-top: 10px;
-}
-
-
-#ambient_light {
-
-}
-
-.infoItem {
-	width: 700px;
-	height: auto;
-
-	margin-top: 10px;
-	padding-left: 5px;
-	padding-top: 5px;	
-
-	color: var(--text);
-	font-family: Helvetica, sens-serif;
-	font-size: 1.5em;
-
-	background: var(--infoBox);
 }
 
 #video {
@@ -328,13 +292,4 @@ label {
 	z-index: 1000;
 	position: absolute;
 	margin: auto;
-}
-
-/* --------------- LOADING VIEW ----------------------*/
-#loadingView {
-	display: none;
-	position: relative;
-
-	width: 100%;
-	height: 80%;
 }
