--- a/SnapYourColor/style_mobile.css
+++ b/SnapYourColor/style_mobile.css
@@ -11,8 +11,16 @@
   	--cameraViewDisplay: none;
 }
 
-@media (orientation: landscape) {
-	
+@media screen only and (orientation: landscape) {
+	html {
+	    transform: rotate(-90deg);
+	    transform-origin: left top;
+	    width: 100vh;
+	    overflow-x: hidden;
+	    position: absolute;
+	    top: 100%;
+	    left: 0;
+  	}
 }
 
 * {
