--- a/SnapYourColor/style_mobile.css
+++ b/SnapYourColor/style_mobile.css
@@ -11,7 +11,7 @@
   	--cameraViewDisplay: none;
 }
 
-@media screen only and (orientation: landscape) {
+@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
 	html {
 	    transform: rotate(-90deg);
 	    transform-origin: left top;
