--- a/SnapYourColor/style_mobile.css
+++ b/SnapYourColor/style_mobile.css
@@ -11,7 +11,7 @@
   	--cameraViewDisplay: none;
 }
 
-@media screen and (orientation: landscape) {
+/*@media screen and (orientation: landscape) {
 	html {
 	    transform: rotate(-90deg);
 	    transform-origin: left top;
@@ -21,7 +21,7 @@
 	    top: 100%;
 	    left: 0;
   	}
-}
+}*/
 
 * {
 	margin: 0px;
